--- a/MonoGame.Framework/MonoGame.Framework.Windows.csproj
+++ b/MonoGame.Framework/MonoGame.Framework.Windows.csproj
@@ -104,6 +104,7 @@
   <ItemGroup>
     <Compile Include="Audio\AudioCategory.cs" />
     <Compile Include="Audio\DynamicSoundEffectInstance.cs" />
+    <Compile Include="ColorConverter.cs" />
     <Compile Include="Content\ContentExtensions.cs" />
     <Compile Include="Content\ContentReaders\DualTextureEffectReader.cs" />
     <Compile Include="Content\ContentReaders\EffectReader.cs" />
