--- a/MonoGame.Framework/MonoGame.Framework.Ouya.csproj
+++ b/MonoGame.Framework/MonoGame.Framework.Ouya.csproj
@@ -24,7 +24,7 @@
     <DebugSymbols>True</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>False</Optimize>
-    <OutputPath>bin\OUYA\Debug\</OutputPath>
+    <OutputPath>..\..\DLL\MonoGame\OUYA\</OutputPath>
     <DefineConstants>TRACE;DEBUG;ANDROID;GLES;GLSL;OPENGL;OUYA</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -35,7 +35,7 @@
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
     <Optimize>True</Optimize>
-    <OutputPath>bin\OUYA\Release\</OutputPath>
+    <OutputPath>..\..\DLL\MonoGame\OUYA\</OutputPath>
     <DefineConstants>TRACE;ANDROID;GLES;OPENGL;OUYA</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -45,6 +45,9 @@
     <EmbedAssembliesIntoApk>True</EmbedAssembliesIntoApk>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Lidgren.Network">
+      <HintPath>..\..\DLL\MonoGame\Android\Lidgren.Network.dll</HintPath>
+    </Reference>
     <Reference Include="Mono.Android" />
     <Reference Include="mscorlib" />
     <Reference Include="OpenTK" />
@@ -57,6 +60,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Android\Ouya\Input\GamePadTouchPad.cs" />
+    <Compile Include="ColorConverter.cs" />
+    <Compile Include="FieldPropertyDescriptor.cs" />
     <Compile Include="Graphics\ResourceCreatedEventArgs.cs" />
     <Compile Include="Graphics\ResourceDestroyedEventArgs.cs" />
     <Compile Include="Android\AndroidCompatibility.cs" />
@@ -259,10 +265,13 @@
     <Compile Include="Quaternion.cs" />
     <Compile Include="Ray.cs" />
     <Compile Include="Rectangle.cs" />
+    <Compile Include="RectangleConverter.cs" />
     <Compile Include="ReusableItemList.cs" />
     <Compile Include="Threading.cs" />
     <Compile Include="Vector2.cs" />
+    <Compile Include="Vector2Converter.cs" />
     <Compile Include="Vector3.cs" />
+    <Compile Include="Vector3Converter.cs" />
     <Compile Include="Vector4.cs" />
     <Compile Include="Content\ContentLoadException.cs" />
     <Compile Include="Content\ContentReader.cs" />
@@ -414,12 +423,6 @@
     <Compile Include="Graphics\Effect\EffectMaterial.cs" />
     <Compile Include="Content\ContentReaders\EffectMaterialReader.cs" />
     <Compile Include="Content\ContentReaders\ExternalReferenceReader.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\ThirdParty\Lidgren.Network\Lidgren.Network.Android.csproj">
-      <Project>{565129E0-4EE5-4F6F-B403-C3484C9740BE}</Project>
-      <Name>Lidgren.Network.Android</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Novell\Novell.MonoDroid.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
